// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocked indicator for pending task 1`] = `
<svg
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "#757575",
      "height": 24,
      "muiPrepared": true,
      "padding": 10,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  title="In progress"
  viewBox="0 0 24 24"
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;

exports[`first block for seeking 1`] = `
<svg
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "#757575",
      "height": 24,
      "muiPrepared": true,
      "padding": 10,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  title="In progress"
  viewBox="0 0 24 24"
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;

exports[`not available indicator for done task 1`] = `
<svg
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "#757575",
      "height": 24,
      "muiPrepared": true,
      "padding": 10,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  title="Not available"
  viewBox="0 0 24 24"
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;

exports[`nothing for empty request 1`] = `null`;

exports[`ready refresh indicator for available refresh 1`] = `
<svg
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "#ffffff",
      "height": 24,
      "muiPrepared": true,
      "padding": 10,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  viewBox="0 0 24 24"
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;

exports[`ready refresh indicator for available refresh 2`] = `
<svg
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "display": "inline-block",
      "fill": "#ffffff",
      "height": 24,
      "muiPrepared": true,
      "padding": 10,
      "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
      "userSelect": "none",
      "width": 24,
    }
  }
  viewBox="0 0 24 24"
>
  <path
    d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"
  />
</svg>
`;
